# sweetly

./: .gitignore  SYSTEM_DESIGN.md  main.py  pyproject.toml
app/: config.py  database.py
app/models/: category.py  order.py  product.py  user.py
app/schemas/: order.py
