[project]
name = "sweetly"
version = "0.1.0"
description = "Web app for managing sweet orders."
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
